@@ -6,7 +6,6 @@ import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -89,7 +88,7 @@ public class SearchQuery<R extends Resource> implements DbSearchQuery, Matcher
 		public SearchQueryBuilder<R> with(
 				@SuppressWarnings("unchecked") SearchQueryParameterFactory<R>... searchParameters)
 		{
-			return with(Arrays.asList(searchParameters));
+			return with(List.of(searchParameters));
 		}
 
 		public SearchQueryBuilder<R> with(List<? extends SearchQueryParameterFactory<R>> searchParameters)
@@ -106,7 +105,7 @@ public class SearchQuery<R extends Resource> implements DbSearchQuery, Matcher
 
 		public SearchQueryBuilder<R> withRevInclude(SearchQueryRevIncludeParameterFactory... revIncludeParameters)
 		{
-			return withRevInclude(Arrays.asList(revIncludeParameters));
+			return withRevInclude(List.of(revIncludeParameters));
 		}
 
 		public SearchQueryBuilder<R> withRevInclude(List<SearchQueryRevIncludeParameterFactory> revIncludeParameters)
@@ -220,11 +219,10 @@ public class SearchQuery<R extends Resource> implements DbSearchQuery, Matcher
 
 		filterQuery = createFilterQuery(queryParameters);
 
-		includeSql = createIncludeSql(queryParameters.getOrDefault(PARAMETER_INCLUDE, Collections.emptyList()));
-		revIncludeSql = createRevIncludeSql(
-				queryParameters.getOrDefault(PARAMETER_REVINCLUDE, Collections.emptyList()));
+		includeSql = createIncludeSql(queryParameters.getOrDefault(PARAMETER_INCLUDE, List.of()));
+		revIncludeSql = createRevIncludeSql(queryParameters.getOrDefault(PARAMETER_REVINCLUDE, List.of()));
 
-		sortSql = createSortSql(queryParameters.getOrDefault(PARAMETER_SORT, Collections.emptyList()));
+		sortSql = createSortSql(queryParameters.getOrDefault(PARAMETER_SORT, List.of()));
 
 		return this;
 	}
@@ -457,7 +455,7 @@ public class SearchQuery<R extends Resource> implements DbSearchQuery, Matcher
 
 		searchParameters.stream().filter(SearchQueryParameter::isDefined)
 				.collect(Collectors.toMap(SearchQueryParameter::getBundleUriQueryParameterName,
-						p -> Collections.singletonList(p.getBundleUriQueryParameterValue()), (v1, v2) ->
+						p -> List.of(p.getBundleUriQueryParameterValue()), (v1, v2) ->
 						{
 							List<String> list = new ArrayList<>(v1);
 							list.addAll(v2);
@@ -528,8 +526,8 @@ public class SearchQuery<R extends Resource> implements DbSearchQuery, Matcher
 		if (resource == null || !getResourceType().isInstance(resource))
 			return false;
 
-		return searchParameters.stream().filter(SearchQueryParameter::isDefined).map(p -> p.matches(resource))
-				.allMatch(b -> b);
+		// returns true if no search parameters configured
+		return searchParameters.stream().filter(SearchQueryParameter::isDefined).allMatch(p -> p.matches(resource));
 	}
 
 	@Override
