@@ -4,7 +4,6 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -23,7 +22,7 @@ public class OrganizationIntegrationTest extends AbstractIntegrationTest
 	@Test
 	public void testSearchAll() throws Exception
 	{
-		Bundle searchBundle = getWebserviceClient().search(Organization.class, Collections.emptyMap());
+		Bundle searchBundle = getWebserviceClient().search(Organization.class, Map.of());
 		assertNotNull(searchBundle);
 		assertEquals(3, searchBundle.getTotal());
 		assertTrue(searchBundle.getEntryFirstRep().getResource() instanceof Organization);
@@ -33,7 +32,7 @@ public class OrganizationIntegrationTest extends AbstractIntegrationTest
 	public void testSearchOrganizationIncludeEndpoint() throws Exception
 	{
 		Bundle searchBundle = getWebserviceClient().search(Organization.class,
-				Map.of("_include", Collections.singletonList("Organization:endpoint")));
+				Map.of("_include", List.of("Organization:endpoint")));
 		assertNotNull(searchBundle);
 		assertEquals(3, searchBundle.getTotal());
 		assertEquals(5, searchBundle.getEntry().size());
@@ -73,7 +72,7 @@ public class OrganizationIntegrationTest extends AbstractIntegrationTest
 	public void testSearchOrganizationRevIncludeEndpoint() throws Exception
 	{
 		Bundle searchBundle = getWebserviceClient().search(Organization.class,
-				Map.of("_revinclude", Collections.singletonList("Endpoint:organization")));
+				Map.of("_revinclude", List.of("Endpoint:organization")));
 		assertNotNull(searchBundle);
 		assertEquals(3, searchBundle.getTotal());
 		assertEquals(5, searchBundle.getEntry().size());
@@ -112,8 +111,8 @@ public class OrganizationIntegrationTest extends AbstractIntegrationTest
 	@Test
 	public void testUpdateOrganizationWithNewThumbprint() throws Exception
 	{
-		Bundle bundle = getWebserviceClient().search(Organization.class, Map.of("identifier",
-				Collections.singletonList("http://dsf.dev/sid/organization-identifier|External_Test_Organization")));
+		Bundle bundle = getWebserviceClient().search(Organization.class,
+				Map.of("identifier", List.of("http://dsf.dev/sid/organization-identifier|External_Test_Organization")));
 		assertNotNull(bundle);
 		assertEquals(1, bundle.getTotal());
 		assertNotNull(bundle.getEntry());
@@ -138,8 +137,8 @@ public class OrganizationIntegrationTest extends AbstractIntegrationTest
 	@Test
 	public void testUpdateOrganizationWithExistingThumbprint() throws Exception
 	{
-		Bundle bundle1 = getWebserviceClient().search(Organization.class, Map.of("identifier",
-				Collections.singletonList("http://dsf.dev/sid/organization-identifier|Test_Organization")));
+		Bundle bundle1 = getWebserviceClient().search(Organization.class,
+				Map.of("identifier", List.of("http://dsf.dev/sid/organization-identifier|Test_Organization")));
 		assertNotNull(bundle1);
 		assertEquals(1, bundle1.getTotal());
 		assertNotNull(bundle1.getEntry());
@@ -158,8 +157,8 @@ public class OrganizationIntegrationTest extends AbstractIntegrationTest
 
 		String existingThumbprint = ((StringType) thumbprints1.get(0).getValue()).getValue();
 
-		Bundle bundle2 = getWebserviceClient().search(Organization.class, Map.of("identifier",
-				Collections.singletonList("http://dsf.dev/sid/organization-identifier|External_Test_Organization")));
+		Bundle bundle2 = getWebserviceClient().search(Organization.class,
+				Map.of("identifier", List.of("http://dsf.dev/sid/organization-identifier|External_Test_Organization")));
 		assertNotNull(bundle2);
 		assertEquals(1, bundle2.getTotal());
 		assertNotNull(bundle2.getEntry());
@@ -184,8 +183,8 @@ public class OrganizationIntegrationTest extends AbstractIntegrationTest
 	@Test
 	public void testUpdateOrganizationWithExistingIdentifier() throws Exception
 	{
-		Bundle bundle = getWebserviceClient().search(Organization.class, Map.of("identifier",
-				Collections.singletonList("http://dsf.dev/sid/organization-identifier|External_Test_Organization")));
+		Bundle bundle = getWebserviceClient().search(Organization.class,
+				Map.of("identifier", List.of("http://dsf.dev/sid/organization-identifier|External_Test_Organization")));
 		assertNotNull(bundle);
 		assertEquals(1, bundle.getTotal());
 		assertNotNull(bundle.getEntry());
@@ -205,8 +204,8 @@ public class OrganizationIntegrationTest extends AbstractIntegrationTest
 	@Test
 	public void testUpdateOrganizationAddNewThumbprint() throws Exception
 	{
-		Bundle bundle = getWebserviceClient().search(Organization.class, Map.of("identifier",
-				Collections.singletonList("http://dsf.dev/sid/organization-identifier|External_Test_Organization")));
+		Bundle bundle = getWebserviceClient().search(Organization.class,
+				Map.of("identifier", List.of("http://dsf.dev/sid/organization-identifier|External_Test_Organization")));
 		assertNotNull(bundle);
 		assertEquals(1, bundle.getTotal());
 		assertNotNull(bundle.getEntry());
@@ -232,14 +231,14 @@ public class OrganizationIntegrationTest extends AbstractIntegrationTest
 		getWebserviceClient().update(org);
 
 		// test if authentication still works
-		getExternalWebserviceClient().search(Organization.class, Collections.emptyMap());
+		getExternalWebserviceClient().search(Organization.class, Map.of());
 	}
 
 	@Test
 	public void testSearchWithUnsupportedRevIncludeParameter() throws Exception
 	{
 		Bundle searchBundle = getWebserviceClient().search(Organization.class,
-				Map.of("_revinclude", Collections.singletonList("Endpoint:foo")));
+				Map.of("_revinclude", List.of("Endpoint:foo")));
 		assertNotNull(searchBundle);
 		assertEquals(3, searchBundle.getTotal());
 		assertEquals(4, searchBundle.getEntry().size());
@@ -255,6 +254,6 @@ public class OrganizationIntegrationTest extends AbstractIntegrationTest
 	public void testStrictSearchWithUnsupportedRevIncludeParameter() throws Exception
 	{
 		expectBadRequest(() -> getWebserviceClient().searchWithStrictHandling(Organization.class,
-				Map.of("_revinclude", Collections.singletonList("Endpoint:foo"))));
+				Map.of("_revinclude", List.of("Endpoint:foo"))));
 	}
 }
