@@ -1,5 +1,7 @@
 package dev.dsf.fhir.integration;
 
+import static de.rwh.utils.crypto.CertificateHelper.DEFAULT_SIGNATURE_ALGORITHM;
+
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -15,7 +17,8 @@ import java.security.cert.CertificateEncodingException;
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
 import java.security.spec.InvalidKeySpecException;
-import java.util.Arrays;
+import java.time.LocalDateTime;
+import java.time.Period;
 import java.util.List;
 import java.util.UUID;
 
@@ -87,11 +90,8 @@ public class X509Certificates extends ExternalResource
 
 	private static final Logger logger = LoggerFactory.getLogger(X509Certificates.class);
 	private static final BouncyCastleProvider provider = new BouncyCastleProvider();
+	private static final int KEY_SIZE = 2048;
 	public static final char[] PASSWORD = "password".toCharArray();
-
-	private boolean beforeRun;
-
-	private final X509Certificates parent;
 
 	private ClientCertificate clientCertificate;
 	private ClientCertificate practitionerClientCertificate;
@@ -109,134 +109,75 @@ public class X509Certificates extends ExternalResource
 
 	private List<Path> filesToDelete;
 
-	public X509Certificates()
-	{
-		this(null);
-	}
-
-	public X509Certificates(X509Certificates parent)
-	{
-		this.parent = parent;
-	}
-
-	private boolean parentBeforeRan()
-	{
-		return parent != null && parent.beforeRun;
-	}
-
 	@Override
 	protected void before() throws Throwable
 	{
-		if (parentBeforeRan())
-			logger.debug("X509Certificates created by parent");
-		else
-			createX509Certificates();
-
-		beforeRun = true;
+		createX509Certificates();
 	}
 
 	@Override
 	protected void after()
 	{
-		if (parentBeforeRan())
-			logger.debug("X509Certificates will be deleted by parent");
-		else
-			deleteX509Certificates();
+		deleteX509Certificates();
 	}
 
 	public ClientCertificate getClientCertificate()
 	{
-		if (parentBeforeRan())
-			return parent.getClientCertificate();
-		else
-			return clientCertificate;
+		return clientCertificate;
 	}
 
 	public ClientCertificate getExternalClientCertificate()
 	{
-		if (parentBeforeRan())
-			return parent.getExternalClientCertificate();
-		else
-			return externalClientCertificate;
+		return externalClientCertificate;
 	}
 
 	public ClientCertificate getPractitionerClientCertificate()
 	{
-		if (parentBeforeRan())
-			return parent.getPractitionerClientCertificate();
-		else
-			return practitionerClientCertificate;
+		return practitionerClientCertificate;
 	}
 
 	public Path getCaCertificateFile()
 	{
-		if (parentBeforeRan())
-			return parent.getCaCertificateFile();
-
 		return caCertificateFile;
 	}
 
 	public Path getServerCertificateFile()
 	{
-		if (parentBeforeRan())
-			return parent.getServerCertificateFile();
-
 		return serverCertificateFile;
 	}
 
 	public Path getServerCertificatePrivateKeyFile()
 	{
-		if (parentBeforeRan())
-			return parent.getServerCertificatePrivateKeyFile();
-
 		return serverCertificatePrivateKeyFile;
 	}
 
 	public Path getClientCertificateFile()
 	{
-		if (parentBeforeRan())
-			return parent.getClientCertificateFile();
-
 		return clientCertificateFile;
 	}
 
 	public Path getClientCertificatePrivateKeyFile()
 	{
-		if (parentBeforeRan())
-			return parent.getClientCertificatePrivateKeyFile();
-
 		return clientCertificatePrivateKeyFile;
 	}
 
 	public Path getExternalClientCertificateFile()
 	{
-		if (parentBeforeRan())
-			return parent.getExternalClientCertificateFile();
-
 		return externalClientCertificateFile;
 	}
 
 	public Path getExternalClientCertificatePrivateKeyFile()
 	{
-		if (parentBeforeRan())
-			return parent.getExternalClientCertificatePrivateKeyFile();
-
 		return externalClientCertificatePrivateKeyFile;
 	}
 
 	public Path getPractitionerClientCertificateFile()
 	{
-		if (parentBeforeRan())
-			return parent.getPractitionerClientCertificateFile();
-
 		return practitionerClientCertificateFile;
 	}
 
 	public Path getPractitionerClientCertificatePrivateKeyFile()
 	{
-		if (parentBeforeRan())
-			return parent.getPractitionerClientCertificatePrivateKeyFile();
-
 		return practitionerClientCertificatePrivateKeyFile;
 	}
 
@@ -258,18 +199,21 @@ public class X509Certificates extends ExternalResource
 		CertificateAuthority.registerBouncyCastleProvider();
 
 		CertificateAuthority ca = new CertificateAuthority("DE", null, null, null, null, "test-ca");
-		ca.initialize();
+		LocalDateTime notBefore = LocalDateTime.now();
+		LocalDateTime notAfter = notBefore.plusDays(1);
+		ca.initialize(notBefore, notAfter, KEY_SIZE, DEFAULT_SIGNATURE_ALGORITHM);
+
 		X509Certificate caCertificate = ca.getCertificate();
 
 		PemIo.writeX509CertificateToPem(caCertificate, caCertificateFile);
 
 		// -- server
 		X500Name serverSubject = CertificationRequestBuilder.createSubject("DE", null, null, null, null, "test-server");
-		KeyPair serverRsaKeyPair = CertificationRequestBuilder.createRsaKeyPair4096Bit();
+		KeyPair serverRsaKeyPair = CertificateHelper.createKeyPair(CertificateHelper.DEFAULT_KEY_ALGORITHM, KEY_SIZE);
 		JcaPKCS10CertificationRequest serverRequest = CertificationRequestBuilder
 				.createServerCertificationRequest(serverSubject, serverRsaKeyPair, null, "localhost");
 
-		X509Certificate serverCertificate = ca.signWebServerCertificate(serverRequest);
+		X509Certificate serverCertificate = ca.signWebServerCertificate(serverRequest, Period.ofDays(1));
 
 		CertificateWriter.toPkcs12(serverCertificateFile, serverRsaKeyPair.getPrivate(), PASSWORD, serverCertificate,
 				caCertificate, "test-server");
@@ -277,16 +221,15 @@ public class X509Certificates extends ExternalResource
 		PemIo.writeX509CertificateToPem(serverCertificate, serverCertificateFile);
 		PemIo.writeAes128EncryptedPrivateKeyToPkcs8(provider, serverCertificatePrivateKeyFile,
 				serverRsaKeyPair.getPrivate(), PASSWORD);
-
 		// server --
 
 		// -- client
 		X500Name clientSubject = CertificationRequestBuilder.createSubject("DE", null, null, null, null, "test-client");
-		KeyPair clientRsaKeyPair = CertificationRequestBuilder.createRsaKeyPair4096Bit();
+		KeyPair clientRsaKeyPair = CertificateHelper.createKeyPair(CertificateHelper.DEFAULT_KEY_ALGORITHM, KEY_SIZE);
 		JcaPKCS10CertificationRequest clientRequest = CertificationRequestBuilder
 				.createClientCertificationRequest(clientSubject, clientRsaKeyPair);
 
-		X509Certificate clientCertificate = ca.signWebClientCertificate(clientRequest);
+		X509Certificate clientCertificate = ca.signWebClientCertificate(clientRequest, Period.ofDays(1));
 
 		KeyStore clientKeyStore = CertificateHelper.toPkcs12KeyStore(clientRsaKeyPair.getPrivate(),
 				new Certificate[] { clientCertificate, caCertificate }, "test-client", PASSWORD);
@@ -299,11 +242,13 @@ public class X509Certificates extends ExternalResource
 		// -- external client
 		X500Name externalClientSubject = CertificationRequestBuilder.createSubject("DE", null, null, null, null,
 				"external-client");
-		KeyPair externalClientRsaKeyPair = CertificationRequestBuilder.createRsaKeyPair4096Bit();
+		KeyPair externalClientRsaKeyPair = CertificateHelper.createKeyPair(CertificateHelper.DEFAULT_KEY_ALGORITHM,
+				KEY_SIZE);
 		JcaPKCS10CertificationRequest externalClientRequest = CertificationRequestBuilder
 				.createClientCertificationRequest(externalClientSubject, externalClientRsaKeyPair);
 
-		X509Certificate externalClientCertificate = ca.signWebClientCertificate(externalClientRequest);
+		X509Certificate externalClientCertificate = ca.signWebClientCertificate(externalClientRequest,
+				Period.ofDays(1));
 
 		KeyStore externalClientKeyStore = CertificateHelper.toPkcs12KeyStore(externalClientRsaKeyPair.getPrivate(),
 				new Certificate[] { externalClientCertificate, caCertificate }, "external-client", PASSWORD);
@@ -319,7 +264,8 @@ public class X509Certificates extends ExternalResource
 		// -- practitioner client
 		X500Name practitionerClientSubject = CertificationRequestBuilder.createSubject("DE", null, null, null, null,
 				"practitioner-client");
-		KeyPair practitionerClientRsaKeyPair = CertificationRequestBuilder.createRsaKeyPair4096Bit();
+		KeyPair practitionerClientRsaKeyPair = CertificateHelper.createKeyPair(CertificateHelper.DEFAULT_KEY_ALGORITHM,
+				KEY_SIZE);
 		JcaPKCS10CertificationRequest practitionerClientRequest = CertificationRequestBuilder
 				.createClientCertificationRequest(practitionerClientSubject, practitionerClientRsaKeyPair,
 						"practitioner@test.org");
@@ -355,7 +301,7 @@ public class X509Certificates extends ExternalResource
 		this.practitionerClientCertificateFile = practitionerClientCertificateFile;
 		this.practitionerClientCertificatePrivateKeyFile = practitionerClientCertificatePrivateKeyFile;
 
-		this.filesToDelete = Arrays.asList(caCertificateFile, serverCertificateFile, serverCertificatePrivateKeyFile,
+		filesToDelete = List.of(caCertificateFile, serverCertificateFile, serverCertificatePrivateKeyFile,
 				clientCertificateFile, clientCertificatePrivateKeyFile, externalClientCertificateFile,
 				externalClientCertificatePrivateKeyFile, practitionerClientCertificateFile,
 				practitionerClientCertificatePrivateKeyFile);
