@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
@@ -81,8 +80,8 @@ public class EnvGenerator
 			String... commonNames)
 	{
 		return clientCertificateFilesByCommonName.entrySet().stream()
-				.filter(entry -> Arrays.asList(commonNames).contains(entry.getKey()))
-				.sorted(Comparator.comparing(e -> Arrays.asList(commonNames).indexOf(e.getKey()))).map(Entry::getValue)
+				.filter(entry -> List.of(commonNames).contains(entry.getKey()))
+				.sorted(Comparator.comparing(e -> List.of(commonNames).indexOf(e.getKey()))).map(Entry::getValue)
 				.map(CertificateFiles::getCertificateSha512ThumbprintHex);
 	}
 
